Change user name, do not hardcode any of the software versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
           files: '**/*.md'
           args: '--lang=en_GB --mode=markdown'
   build-push:
-    uses: reitermarkus/.github/.github/workflows/docker-build-push.yml@main
+    uses: ktht/.github/.github/workflows/docker-build-push.yml@main
