Update action metadata

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Run Aspell'
-description: 'Run `aspell` to check spelling in one or more TeX files.'
+name: 'Run Aspell (unversioned)'
+description: 'Run `aspell` to check spelling in one or more TeX files (no versions hardcoded)'
 author: reitermarkus, forked by ktht
 branding:
   icon: 'book'
